--- a/app/src/main/res/layout/activity_change_background.xml
+++ b/app/src/main/res/layout/activity_change_background.xml
@@ -18,11 +18,11 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="2dp"
-        android:clickable="true"
-        android:background="@android:color/transparent"/>
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:elevation="2dp"-->
+<!--        android:clickable="true"-->
+<!--        android:background="@android:color/transparent"/>-->
 
 </RelativeLayout>
